<resources>
    <string name="app_name">Budget Management</string>
    <string name="general_error">Something went wrong</string>
    <string name="account_saved_success">Account saved successfully</string>
    <string name="transaction_saved_success">Transaction saved successfully</string>
    <string name="account_deleted_success">Account deleted successfully</string>
    <string name="account_name_validation_message">Name is empty, please enter account name</string>
    <string name="transaction_description_validation_message">Description is empty, please enter transaction description</string>
    <string name="transaction_amount_validation_message">Amount is empty, please enter transaction amount</string>
    <string name="transaction_date_validation_message">Date is required, please select transaction date</string>
    <string name="transaction_type_validation_message">Type is required, please select transaction type</string>
    <string name="transaction_currency_validation_message">Currency is required, please select transaction currency</string>

    <string name="accounts">Accounts</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="enter_name">Enter name</string>
    <string name="add">Add</string>
    <string name="export">Export</string>
    <string name="select_date">Select date</string>

    <string name="dollar_value_formatted">Dollar: %s</string>
    <string name="dinnar_value_formatted">Dinnar: %s</string>
    <string name="add_account">Add Account</string>
    <string name="edit_account">Edit Account</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="edit_transaction">Edit Transaction</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="dollar">Dollar</string>
    <string name="dinnar">Dinnar</string>
    <string name="income">Income</string>
    <string name="spend">Spend</string>
    <string name="transactions">Transactions</string>
    <string name="months">Months</string>
    <string name="choose_date">Choose Date</string>
</resources>